--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -5,34 +5,27 @@
 <section class='links'>
   <section class='section'>
     <h2>Resources</h2>
+    <h3><a href='http://web.worldbank.org/WBSITE/EXTERNAL/TOPICS/CSO/0,,pagePK:220469~theSitePK:228717,00.html'>Civil Society</a></h3>
+    <h3><a href='http://consultations.worldbank.org/'>Consultations</a></h3>
+    <h3><a href='https://clientconnection.worldbank.org/servlet/main?menuPK=234032&amp;pagePK=232663&amp;piPK=234033'>Governments</a></h3>
     <ul>
-      <li><h3><a href='http://web.worldbank.org/WBSITE/EXTERNAL/TOPICS/CSO/0,,pagePK:220469~theSitePK:228717,00.html'>Civil Society</a></h3></li>
-      <li><h3><a href='http://consultations.worldbank.org/'>Consultations</a></h3></li>
-      <li>
-        <h3><a href='https://clientconnection.worldbank.org/servlet/main?menuPK=234032&amp;pagePK=232663&amp;piPK=234033'>Governments</a></h3>
-        <ul>
-          <li><a href='https://clientconnection.worldbank.org/servlet/main?menuPK=234032&amp;pagePK=232663&amp;piPK=234033'>Client Connection</a></li>
-          <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/EXTABOUTUS/PARTNERS/EXTPARLIAMENTARIANS/0,,menuPK:64165869~pagePK:64165874~piPK:64165885~theSitePK:464534,00.html'>Parliamentarians</a></li>
-          <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/PROJECTANDOPERATIONS/EXTINFODISCLOSURE/0,,menuPK:64864911~pagePK:4749265~piPK:4749256~theSitePK:5033734,00.html'>Access to Information</a></li>
-          <li><a href='http://treasury.worldbank.org/bdm/htm/index.html'>Finance &amp; Risk Management</a></li>
-        </ul>
-      </li>
-      <li>
-        <h3><a href='http://web.worldbank.org/WBSITE/EXTERNAL/OPPORTUNITIES/EXTCORPPROCUREMENT/0,,menuPK:64147159~pagePK:64147234~piPK:64147236~theSitePK:438017,00.html'>Businesses</a></h3>
-        <ul>
-          <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/OPPORTUNITIES/EXTCORPPROCUREMENT/0,,menuPK:64147159~pagePK:64147234~piPK:64147236~theSitePK:438017,00.html'>Corporate Procurement</a></li>
-          <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/PROJECTS/PROCUREMENT/0,,contentMDK:20109705~pagePK:84269~piPK:60001558~theSitePK:84266,00.html'>Operational Procurement</a></li>
-        </ul>
-      </li>
-      <li>
-        <h3><a href='http://treasury.worldbank.org/cmd/htm/index.html'>Investors</a></h3>
-        <ul>
-          <li><a href='http://treasury.worldbank.org/cmd/htm/index.html'>World Bank Bonds</a></li>
-        </ul>
-      </li>
-      <li><h3><a href='http://web.worldbank.org/WBSITE/EXTERNAL/EXTJOBSNEW/0,,pagePK:8454306~theSitePK:8453353,00.html'>Job Seekers</a></h3></li>
-      <li><h3><a href='http://web.worldbank.org/WBSITE/EXTERNAL/NEWS/0,,pagePK:34382~piPK:34439~theSitePK:4607,00.html'>Journalists</a></h3></li>
-      <li><h3><a href='http://youthink.worldbank.org/'>Students</a></h3></li>
+      <li><a href='https://clientconnection.worldbank.org/servlet/main?menuPK=234032&amp;pagePK=232663&amp;piPK=234033'>Client Connection</a></li>
+      <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/EXTABOUTUS/PARTNERS/EXTPARLIAMENTARIANS/0,,menuPK:64165869~pagePK:64165874~piPK:64165885~theSitePK:464534,00.html'>Parliamentarians</a></li>
+      <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/PROJECTANDOPERATIONS/EXTINFODISCLOSURE/0,,menuPK:64864911~pagePK:4749265~piPK:4749256~theSitePK:5033734,00.html'>Access to Information</a></li>
+      <li><a href='http://treasury.worldbank.org/bdm/htm/index.html'>Finance &amp; Risk Management</a></li>
+    </ul> 
+    <h3><a href='http://web.worldbank.org/WBSITE/EXTERNAL/OPPORTUNITIES/EXTCORPPROCUREMENT/0,,menuPK:64147159~pagePK:64147234~piPK:64147236~theSitePK:438017,00.html'>Businesses</a></h3>
+    <ul>
+      <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/OPPORTUNITIES/EXTCORPPROCUREMENT/0,,menuPK:64147159~pagePK:64147234~piPK:64147236~theSitePK:438017,00.html'>Corporate Procurement</a></li>
+      <li><a href='http://web.worldbank.org/WBSITE/EXTERNAL/PROJECTS/PROCUREMENT/0,,contentMDK:20109705~pagePK:84269~piPK:60001558~theSitePK:84266,00.html'>Operational Procurement</a></li>
+    </ul>
+    <h3><a href='http://treasury.worldbank.org/cmd/htm/index.html'>Investors</a></h3>
+    <ul>
+      <li><a href='http://treasury.worldbank.org/cmd/htm/index.html'>World Bank Bonds</a></li>
+    </ul>
+    <h3><a href='http://web.worldbank.org/WBSITE/EXTERNAL/EXTJOBSNEW/0,,pagePK:8454306~theSitePK:8453353,00.html'>Job Seekers</a></h3>
+    <h3><a href='http://web.worldbank.org/WBSITE/EXTERNAL/NEWS/0,,pagePK:34382~piPK:34439~theSitePK:4607,00.html'>Journalists</a></h3>
+    <h3><a href='http://youthink.worldbank.org/'>Students</a></h3>
     </ul>
   </section>
 
