--- a/templates/partials/_navigation.html
+++ b/templates/partials/_navigation.html
@@ -1,33 +1,37 @@
-<header class='header'>
-  <a class='logo' href='http://www.worldbank.org'><strong>The World Bank</strong> Working for a World Free of Poverty</a>
-  
-  <form class='search' method=get action='http://search.worldbank.org/all' accept-charset='UTF-8' class='clear-block'>
-    <input type='text' size='15' name='qterm' class='search-text' placeholder='Search'/>
-    <input type='hidden' name='language' value='EN'/>
-    <button class='submit' type='submit' name='op' value=''><span>Search</span></button>
-  </form>
+<a class='logo' href='http://www.worldbank.org'><strong>The World Bank</strong><span>Working for a World Free of Poverty</span></a>
 
-  <ul>
+<button class='menu'><span>Menu</span></button>
+
+<div class='options'>
+  <section class='search'>
+    <form method=get action='http://search.worldbank.org/all' accept-charset='UTF-8' class='clear-block'>
+      <input type='text' size='15' name='qterm' class='search-text' placeholder='Search'/>
+      <input type='hidden' name='language' value='EN'/>
+      <button class='submit' type='submit' name='op' value=''><span>Search</span></button>
+    </form>
+  </section>
+
+  <ul class='languages'>
     <li><a href='http://www.worldbank.org/'>English</a></li>
     <li><a href='http://www.bancomundial.org/'>Español</a></li>
     <li><a href='http://www.banquemondiale.org/'>Français</a></li>
     <li><a href='http://www.albankaldawli.org/'>عربي</a></li>
     <li><a href='http://www.worldbank.org/eca/russian/'>Русский</a></li>
     <li><a href='http://www.worldbank.org.cn/Chinese/'>中文</a></li>
-    <li><a class='more' href='http://www.worldbank.org/languages' title='More Languages'><span>More</span></a></li>
+    <li><a class='more' href='http://www.worldbank.org/languages' title='More Languages'><span>More languages</span></a></li>
   </ul>
-</header>
 
-<ul class='links'>
-  <li><a href='http://www.worldbank.org/'>Home</a></li>
-  <li><a href='http://www.worldbank.org/en/about'>About</a></li>
-  <li class='active'><a href='http://data.worldbank.org/'>Data</a></li>
-  <li><a href='http://econ.worldbank.org/WBSITE/EXTERNAL/EXTDEC/0,,menuPK:476823~pagePK:64165236~piPK:64165141~theSitePK:469372,00.html'>Research</a>
-  </li>
-  <li><a href='http://wbi.worldbank.org/wbi/'>Learning</a></li>
-  <li><a href='http://www.worldbank.org/en/news'>News</a></li>
-  <li><a href='http://www.worldbank.org/projects?lang=en'>Projects &amp; Operations</a></li>
-  <li><a href='http://www.worldbank.org/reference/'>Publications</a></li>
-  <li><a href='http://www.worldbank.org/en/country'>Countries</a></li>
-  <li><a href='http://www.worldbank.org/en/topic'>Topics</a></li>
-</ul>
+  <ul class='links'>
+    <li><a href='http://www.worldbank.org/'>Home</a></li>
+    <li><a href='http://www.worldbank.org/en/about'>About</a></li>
+    <li class='active'><a href='http://data.worldbank.org/'>Data</a></li>
+    <li><a href='http://econ.worldbank.org/WBSITE/EXTERNAL/EXTDEC/0,,menuPK:476823~pagePK:64165236~piPK:64165141~theSitePK:469372,00.html'>Research</a>
+    </li>
+    <li><a href='http://wbi.worldbank.org/wbi/'>Learning</a></li>
+    <li><a href='http://www.worldbank.org/en/news'>News</a></li>
+    <li><a href='http://www.worldbank.org/projects?lang=en'>Projects &amp; Operations</a></li>
+    <li><a href='http://www.worldbank.org/reference/'>Publications</a></li>
+    <li><a href='http://www.worldbank.org/en/country'>Countries</a></li>
+    <li><a href='http://www.worldbank.org/en/topic'>Topics</a></li>
+  </ul>
+</div>
