--- a/templates/partials/_navigation.html
+++ b/templates/partials/_navigation.html
@@ -1,6 +1,6 @@
 <a class='logo' href='http://www.worldbank.org'><strong>The World Bank</strong><span>Working for a World Free of Poverty</span></a>
 
-<button class='menu'><span>Menu</span></button>
+<a href='#navigation' class='menu'><span>Menu</span></a>
 
 <div class='options'>
   <section class='search'>
