--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -1,14 +1,25 @@
-<h2><a href='/{{ locale }}'>Open Government Data Toolkit</a></h2>
-<ul>
-	{% for item in sidebar %}
-	<li{% if item.name == title %} class='active'{% endif %}><h3><a href='{{ item.link }}'>{{ item.name }}</a></h3>
-	{% if item.name == title %}
-	{% for heading in headings %}
-	{% if loop.first %}<ul>{% endif %}
-	<li><a href="#{{ heading.id }}">{{ heading.text }}</a></li>
-	{% if loop.last %}</ul>{% endif %}
-	{% endfor %}
-	{% endif %}
-	</li>
-	{% endfor %}
-</ul>
+<nav class='links'>
+	<h2><a href='/{{ locale }}'>Open Government Data Toolkit</a></h2>
+	<ul>
+		{% for item in sidebar %}
+		<li{% if item.name == title %} class='active'{% endif %}><h3><a href='{{ item.link }}'>{{ item.name }}</a></h3>
+		{% if item.name == title %}
+		{% for heading in headings %}
+		{% if loop.first %}<ul>{% endif %}
+		<li><a href="#{{ heading.id }}">{{ heading.text }}</a></li>
+		{% if loop.last %}</ul>{% endif %}
+		{% endfor %}
+		{% endif %}
+		</li>
+		{% endfor %}
+	</ul>
+</nav>
+
+<div class='select'>
+  <select name='sidebar'>
+		<option value='/'>Open Government Data Toolkit</option>
+		{% for item in sidebar %}
+		<option{% if item.name == title %} checked{% endif %} value='{{ item.link }}'>{{ item.name }}</option>
+		{% endfor %}
+  </select>
+</div>
