--- a/templates/default.html
+++ b/templates/default.html
@@ -34,7 +34,7 @@
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
 </head>
 <body>
-  <nav id='navigation'>
+  <nav id='navigation' name='navigation'>
     <div class='content'>
       {% include 'partials/_navigation.html' %}
     </div>
